--- a/styles/_basic.scss
+++ b/styles/_basic.scss
@@ -3,6 +3,33 @@
 }
 
 body {
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h5,
+p,
+ul,
+button {
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: unset;
+}
+
+li {
+    list-style: none;
+}
+
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
 }
