--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -113,3 +113,31 @@
         width: 300px;
     }
 }
+
+.wave-card {
+    width: 500px;
+    height: 275px;
+    background: url('../assets/wave_card_bg.svg') center/cover no-repeat;
+    @include m.d-flex(start, start, nowrap, column, 0, 35px);
+
+    &__avatar {
+        margin: 20px 0 0 20px;
+    }
+
+    &__quote {
+        @include m.font(20px, 400, v.$color_white);
+        margin: 0 45px 0 30px;
+        line-height: 1.4;
+        text-align: justify;
+    }
+
+    @media (max-width: v.$media_md) {
+        width: 330px;
+        row-gap: 15px;
+        background: url('../assets/wave_card_bg.svg') 50% 0/contain no-repeat;
+    
+        &__quote {
+            @include m.font(13px, 400, v.$color_white);
+        }
+    }
+}
