--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -8,6 +8,8 @@
     height: 50px;
     background-color: color.adjust(v.$color_white, $alpha: -0.85);
     // background-color: v.$color_blue;
+
+    // border-bottom: 1px solid v.$color_white;
     border: {
         bottom: {
             width: 1px;
@@ -23,13 +25,7 @@
         &__title {
             height: 100%;
             width: 255px;
-            border: {
-                right: {
-                    width: 1px;
-                    style: solid;
-                    color: v.$color_white;
-                }
-            }
+            border-right: 1px solid v.$color_white;
             @include m.d-flex(center, center);
 
             &-link {
@@ -75,6 +71,7 @@
             height: 100%;
             @include m.d-flex(center, center);
             padding: 0 30px;
+
             border: {
                 left: 1px solid v.$color_white;
                 right: 1px solid v.$color_white;
@@ -97,10 +94,76 @@
                 &-icon {
                     width: 27px;
                     height: 28px;
-                    fill: v.$color_white;
                     @extend %hover-black-icon;
                 }
             }
         }
+
+        @media (max-width: v.$media_md) {
+            &__links,
+            .covid,
+            .globe {
+                display: none;
+            }
+        }
+    }
+}
+
+.mobile-navigation {
+    display: none;
+
+    &__burger {
+        @include m.position(absolute, 10, -1, top, right, 13px, 20px);
+
+        &-icon {
+            width: 33px;
+            height: 22px;
+            stroke: v.$color_white;
+            @extend %hover-black-icon;
+        }
+    }
+
+    &__toggler {
+        display: none;
+
+        &:checked + .nav {
+            translate: 0;
+        }
+    }
+
+    .nav {
+        padding: 100px 70px 0;
+        @include m.position(fixed, 999, 0);
+        background-color: color.adjust(v.$color_black, $alpha: -0.5);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        translate: 100% 0;
+        transition: translate .22s;
+
+        &__list {
+            @include m.d-flex(start, start, nowrap, column, 0, 20px);
+
+            &-item {
+                &-link {
+                    @include m.font(36px, 400, v.$color_white);
+                    text-shadow: 2px 2px 5px rgba(0,0,0.3);
+                }
+            }
+        }
+
+        &__close {
+            @include m.position(absolute, 10, -1, top, right, 18px, 23px);
+    
+            &-icon {
+                width: 25px;
+                height: 22px;
+                stroke: v.$color_white;
+                @extend %hover-black-icon;
+            }
+        }
+    }
+
+    @media (max-width: v.$media_md) {
+        display: block;
     }
 }
